[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetches research papers from PubMed and filters them."
authors = ["Your Name <your.email@example.com>"]  # Replace with your details
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
biopython = "^1.79"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.poetry.scripts]
get-papers-list = "get-papers-list:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
